--- a/demo/index.html
+++ b/demo/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
+    <title>demo for moe-vim-mode</title>
     <link rel="stylesheet" data-name="vs/editor/editor.main" href="../node_modules/monaco-editor/min/vs/editor/editor.main.css">
     <style>
         .visual-mode-fake-cursor { background: rgba(0,0,0,.13)!important; }
